[add] generateReplyにGETを実装した
